--- a/src/app/unit/unit/unit.component.css
+++ b/src/app/unit/unit/unit.component.css
@@ -6,6 +6,10 @@
 .unit-wrapper {
   border: 1px solid #E9EBEE;
   border-radius: 5px;
+  cursor: pointer;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -14,6 +18,10 @@ img {
 
 .content-wrapper {
   padding: 1rem;
+  flex: 1;
+  /* border: 1px solid; */
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
@@ -39,8 +47,10 @@ img {
 }
 
 .actions {
+  flex: 1 0 auto;
   display: flex;
   justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .actions>button {
